# dmeth

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
UserGuide/: index.html
demo/: dmeth_limma_benchmark_2025-12-01.ipynb
docs/: UserGuide.md  index.md
scripts/: generate_user_guide.py  update_changelog.py
search/: search_index.json
src/dmeth/: __init__.py
src/dmeth/config/: config_manager.py  defaults.json
src/dmeth/core/: data_preprocessing.py  planner.py
src/dmeth/core/analysis/: core_analysis.py  postprocessing.py  preparation.py  validation.py
src/dmeth/core/downstream/: annotation.py  deconvolution.py  downstream_stats.py  helpers.py  signature.py
src/dmeth/io/: data_utils.py  readers.py  writers.py
src/dmeth/utils/: logger.py  plotting.py
tests/: test_data_preprocessing.py  test_differential_analysis.py  test_downstream_analysis.py  test_io.py  test_planner.py  test_planner_config.py  test_utils.py
