[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmeth"
version = "0.1.1"
description = "dmeth: A toolkit for comprehensive, transparent, and reproducible DNA methylation analysis"
authors = [
    { name = "Dare Afolabi", email = "dare.afolabi@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }

keywords = [
    "dna-methylation",
    "epigenetics",
    "differential-methylation",
    "bioinformatics",
    "limma",
    "biomarker-discovery",
    "cell-type-deconvolution"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.23,<3.0",
    "pandas>=1.5,<3.0",
    "scipy>=1.9,<2.0",
    "statsmodels>=0.14,<1.0",
    "pydantic>=1.10,<3.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<1.0",
    "tqdm>=4.65,<5.0",
    "scikit-learn>=1.2,<2.0",
    "jsonschema>=4.17,<5.0"
]

[project.optional-dependencies]
speed = [
    "combat>=0.3,<1.0",
    "numba>=0.57,<1.0"
]

annotation = [
    "intervaltree>=3.1,<4.0",
    "pyliftover>=0.4,<1.0"
]

parallel = [
    "joblib>=1.2,<2.0"
]

data-formats = [
    "PyYAML>=6.0,<7.0",
    "toml>=0.10,<1.0",
    "xlrd>=2.0,<3.0",
    "h5py>=3.8,<4.0"
]

plotting = [
    "plotly>=5.15,<7.0",
    "umap-learn>=0.5.3,<1.0"
]

io = [
    "pyarrow>=14,<23.0",
    "tables>=3.9,<4.0",
    "openpyxl>=3.1,<4.0",
    "xlsxwriter>=3.0,<4.0"
]

full = [
    "dmeth[speed]",
    "dmeth[annotation]",
    "dmeth[parallel]",
    "dmeth[data-formats]",
    "dmeth[plotting]",
    "dmeth[io]"
]

dev = [
    "pytest>=7.3,<10.0",
    "pytest-cov>=4.1,<8.0",
    "black>=23.3,<26.0",
    "isort>=5.12,<8.0",
    "flake8>=7.0,<8.0",
    "flake8-pyproject>=1.2,<2.0",
    "flake8-bugbear>=23.0,<26.0",
    "bandit>=1.7,<2.0",
    "mypy>=1.5,<2.0",
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.5,<10.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
extend-exclude = ["build", "dist", ".git", "__pycache__"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = false
ignore_missing_imports = true
strict = true
mypy_path = ["src"]
exclude = ["build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=dmeth/core/analysis --cov-report=term-missing -ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.coverage.run]
source = ["src/dmeth"]
branch = true
omit = ["*/_version.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
precision = 2

